Package name is changed to lower letter

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Genail/Blog",
+    "name": "genail/blog",
     "description": "A complete blog package",
     "authors": [
         {
