Package name is changed to lower letter

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {},
     "autoload": {
         "classmap": [
-            "database"
+            "src\\database"
         ]
     },
     "extra": {
